--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,57 @@
 h1{
     background-color: green;
+    border: 10px solid red;
 }
+
+*{
+    margin: 0;
+    padding: 0;   
+}
+
+.container{
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.mt-1{
+    margin-top: 10px;
+}
+.mt-2{
+    margin-top: 20px;
+}
+.mt-3{
+    margin-top: 30px;
+}
+.mt-4{
+    margin-top: 40px;
+}
+.mt-5{
+    margin-top: 50px;
+}
+
+
+.py-1{
+   padding: 10px 0;
+}
+
+.py-2{
+    padding: 20px 0;
+ }
+
+ .py-3{
+    padding: 30px 0;
+ }
+
+ .py-4{
+    padding: 40px 0;
+ }
+
+ .py-5{
+    padding: 50px 0;
+ }
+
+
+ .circle{
+    border-radius: 50%;
+ }
