--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 
 /* h1{
@@ -65,14 +66,12 @@
     background-image: url('../images/banner.png');
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-color: rgba(0,0,0,.5); */
     border-radius: 20px;   
  }
 
  .banner-content{
-    padding: 177px 344px;
+    padding: 177px 300px;
     background-color: rgba(0,0,0,.5);
-    /* border: 2px solid white; */
     border-radius: 20px;
  }
 
@@ -82,6 +81,7 @@
     font-size: 32px;
     font-weight: 400;
     line-height: normal;
+    font-family: Merriweather;
  }
 
  .banner-message{
@@ -90,6 +90,7 @@
     font-size: 72px;
     font-style: normal;
     font-weight: 900;
+    font-family: Merriweather;
  }
 
 /* discount section  */
