--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-
-/* h1{
-    background-color: green;
-    border: 10px solid red;
-} */
+/* boiler css item */
 
 *{
     margin: 0;
     padding: 0;   
 }
 
-/* boiler css item */
+
 
 .container{
     width: 90%;
@@ -62,6 +58,9 @@
     border-radius: 50%;
  }
 
+
+ /* banner section  */
+
  .banner{
     background-image: url('../images/banner.png');
     background-repeat: no-repeat;
@@ -80,7 +79,6 @@
     text-align: center;
     font-size: 32px;
     font-weight: 400;
-    line-height: normal;
     font-family: Merriweather;
  }
 
@@ -88,21 +86,22 @@
     color: #FFF;
     text-align: center;
     font-size: 72px;
-    font-style: normal;
     font-weight: 900;
     font-family: Merriweather;
  }
 
 /* discount section  */
 
+.discount-content{
+    padding: 0 200px;
+}
+
 .discount-title{
     color: #F00;
     text-align: center;
     font-family: Inter;
     font-size: 88px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
 }
 
 .discount-message{
@@ -110,9 +109,7 @@
     text-align: center;
     font-family: Inter;
     font-size: 24px;
-    font-style: normal;
     font-weight: 500;
-    line-height: normal;
 }
 
 .discount-text{
@@ -120,11 +117,43 @@
     text-align: center;
     font-family: Inter;
     font-size: 48px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
 }
 
-.discount-content{
-    padding: 0 200px;
+
+
+/* welcome section  */
+
+.welcome-background{
+    background-image: url('../images/vectorrr.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 20px;
+
+}
+.welcome{
+
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(0,0,0,0.5);
+    padding: 68px 138px;
+    border-radius: 20px;
+
+}
+
+.welcome-title{
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 7.04px;
+}
+
+.welcome-message{
+    color: rgba(255, 255, 255, 0.80);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
 }
