--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,16 @@
     padding: 50px 0;
  }
 
+ .px-1{
+    padding-right: 10px;
+    padding-left: 10px;
+ }
+
+ .px-2{
+    padding-right: 20px;
+    padding-left: 20px;
+ }
+
 
  .circle{
     border-radius: 50%;
@@ -156,4 +166,16 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+
+.btn-join{
+    background-color: rgba(0,0,0,.1);
+    border: none;
+    color: white;
+}
+.btn-join:hover{
+    background-color: rgba(0,0,0,1);
+    border: 2px solid white;
+    border-radius: 5px;
+    transition: 0.5s;
 }
