--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@
 /* welcome section  */
 
 .welcome-background{
-    background-image: url('../images/vectorrr.png');
+    background-image: url('../images/vector.png');
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 20px;
