--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,12 @@
     margin: 0 auto;
 }
 
+.container-fluid{
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+}
+
 .row{
     position: relative;
 }
@@ -248,7 +254,6 @@
 
 /* subscribe section  */
 .subscribe{
-    /* background-color: blanchedalmond; */
     background-color: rgba(255, 0, 0, 0.05);
     border-radius: 20px;
 }
@@ -262,9 +267,7 @@
     text-align: center;
     font-family: Merriweather;
     font-size: 48px;
-    /* font-style: normal; */
     font-weight: 900;
-    /* line-height: normal; */
     text-transform: capitalize;
 }
 
@@ -289,7 +292,6 @@
     border-radius: 50px 0 0 50px;
     border: none;
     font-size: 20px;
-    /* font-weight: 600; */
 }
 
 .form-input-btn{
@@ -309,4 +311,42 @@
 .subscribe-image{
     display: flex;
     justify-content: center;
+}
+
+
+/* footer section  */
+
+.bg-blue-dark{
+    background-color: #070211;
+}
+
+.footer{
+    padding: 120px 140px;
+}
+
+.footer-first-content{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.footer-first-content li{
+    list-style: none;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px;
+}
+
+.footer-second-content{
+    margin-bottom: 50px;
+}
+
+.footer-second-content li{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    
 }
