--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,26 @@
     content: '';
 }
 
+
+.col-1  {width: 8.33%;   }
+.col-2  {width: 16.66%; }
+.col-3  {width: 25%;    }
+.col-4  {width: 33.33%; }
+.col-5  {width: 41.66%; }
+.col-6  {width: 50%;    }
+.col-7  {width: 58.33%; }
+.col-8  {width: 66.66%; }
+.col-9  {width: 75%;    }
+.col-10 {width: 83.33%; }
+.col-11 {width: 91.66%; }
+.col-12 {width: 100%;   }
+
+
+
+[class*='col-']{
+    float: left;
+}
+
 .mt-1{
     margin-top: 10px;
 }
@@ -201,6 +221,44 @@
     transition: 0.5s;
 }
 
+/* coming soon section  */
+
+.coming-message{
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.coming-title{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+}
+
+.coming-text{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px; 
+}
+
+.coming-third-title{
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.coming-soon-img{
+    height: 360px;
+    width: 360px;
+    padding: 20px 20px;
+    border: 10px solid red;
+}
+
 
 
 
@@ -273,7 +331,7 @@
     border: none;
     font-weight: bold;
     font-family: Inter;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
 
 }
 
@@ -333,7 +391,7 @@
     border: none;
 }
 
-.subscribe-image{
+.subscribe-image, .coming-soon-img{
     display: flex;
     justify-content: center;
 }
