--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,40 @@
 }
 
 
+/* holiday section  */
+.holiday-content{
+    text-align: center;
+    padding: 0 145px;
+}
 
+.holiday-message{
+    color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.holiday-title{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+}
+
+
+.holiday-text{
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px; 
+}
 
 /* portfolio section  */
 
